syntax = "proto2";

option java_package = "com.google.android.finsky";
option java_multiple_files = true;


message BulkDetailsRequest {
    repeated DetailsRequest requests = 8;
}

message DetailsRequest {
    required string packageName = 1;
    optional uint32 versionCode = 2;
    required uint32 unknown0 = 3; // = 0
}